# dsv_writer

./: Cargo.toml  README.md
dsv_writer/: Cargo.toml
dsv_writer/src/: argument_error.rs  delimiter_error.rs  escape_outcome.rs  field_description.rs  field_descriptor.rs  fixed_writer.rs  lib.rs  new_line.rs  new_line_mode.rs  primitive_encoder.rs  primitive_writer.rs  quote_mode.rs  raw_async_encoder.rs  raw_async_writer.rs  raw_encoder.rs  raw_encoder_error.rs  raw_writer.rs  to_dsv.rs  type_descriptor.rs  typed_writer.rs
playground/: Cargo.toml
playground/benches/: bench.rs  consider.rs  neon_bench.rs  x86_64_bench.rs
playground/src/: avx_sse.rs  cmp_mask.rs  cmpestri.rs  field_datum.rs  lib.rs  main.rs  neon.rs  poc_descriptor.rs  poc_selector.rs  quote_masks.rs  sample_generator.rs  scalar.rs  shared.rs  should_quote_datum.rs
