[package]
name = "dsv_writer"
version = "0.7.2"
edition = "2024"
publish = ["kellnr"]

[dev-dependencies]
mockall = "*"
tokio = { version = "*", features = ["test-util", "macros", "rt"] }


[dependencies]
thiserror = "*"
predicates-core = "1.0.9"
common_errors = { version = "*", registry = "kellnr" }
futures = "*"

