[package]
name = "dsv_writer"
version = "0.8.1"
edition = "2024"

[dev-dependencies]
mockall = "*"
tokio = { version = "*", features = ["test-util", "macros", "rt"] }


[dependencies]
thiserror = "*"
predicates-core = "1.0.9"
common_errors = { git = "https://github.com/Tokeiya/common_errors", branch = "master" }
futures = "*"

